# chromium.bb

./: .DEPS.git  .babelrc  .clang-format  .cvsignore  .dir-locals.el  .dockerignore  .editorconfig  .eslintrc.js  .gclient  .gclient_entries  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .gn  .mailmap  .nongit  .travis.yml  .vpython  70-wayland.rules  ANNOUNCEMENT  AUTHORS  Android.bp  Android.common.mk  Android.gralloc.mk  Android.mk  BUILD.gn  BUILD.md  CHANGELOG  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  COMMIT-QUEUE.ini  CONTRIBUTING.md  COPYING  COPYING.MIT  CREDITS.chromium  CROS_OWNERS  ChangeLog  (+758 more)
amdgpu/: Android.mk  Makefile.am  Makefile.sources  amdgpu-symbol-check  amdgpu.h  amdgpu_asic_id.c  amdgpu_asic_id.h  amdgpu_bo.c  amdgpu_cs.c  amdgpu_device.c  amdgpu_gpu_info.c  amdgpu_internal.h  amdgpu_vamgr.c  amdgpu_vm.c  handle_table.c  libdrm_amdgpu.pc.in  meson.build  util_hash.c  util_hash.h  util_hash_table.c  util_hash_table.h
android_webview/: Android.mk  BUILD.gn  DEPS  OWNERS  README.md  aapt2.config  all_webview.gyp  android_webview.gyp  android_webview_shell.gyp  android_webview_shell_test_apk.isolate  android_webview_telemetry_shell.gyp  android_webview_test_apk.isolate  android_webview_test_apk_run.isolate  android_webview_tests.gypi  android_webview_unittests_apk.isolate  aw_browser.gypi  java_library_common.mk  libwebviewchromium.gypi  snapshot_copying.gypi  system_webview_apk_tmpl.gni  system_webview_shell_test_apk.isolate  variables.gni  webview_pak.mk  webview_repack_locales.gni  webview_repack_locales_list.gni
api/: BUILD.gn  README.md  api_config.py  api_config_unittest.py  build_api.py  build_api_unittest.py  compile_build_api_proto.py  faux.py  field_handler.py  field_handler_unittest.py  mdns_screen_listener.cc  mdns_screen_listener.h  mdns_screen_publisher.h  message_util.py  message_util_unittest.py  metrics.py  network_service_manager.cc  network_service_manager.h  proto_compiled_unittest.py  router.py  router_unittest.py  screen_connection_client.h  screen_connection_server.h  screen_listener.cc  screen_listener.h  validate.py  validate_unittest.py
apps/: BUILD.gn  DEPS  OWNERS  aomdec.c  aomenc.c  aomenc.h  app_delegate.h  app_keep_alive_service.cc  app_keep_alive_service.h  app_keep_alive_service_factory.cc  app_keep_alive_service_factory.h  app_keep_alive_service_unittest.cc  app_launch_for_metro_restart_win.cc  app_launch_for_metro_restart_win.h  app_launcher.cc  app_launcher.h  app_lifetime_monitor.cc  app_lifetime_monitor.h  app_lifetime_monitor_factory.cc  app_lifetime_monitor_factory.h  app_load_service.cc  app_load_service.h  app_load_service_factory.cc  app_load_service_factory.h  app_restore_service.cc  app_restore_service.h  app_restore_service_browsertest.cc  app_restore_service_factory.cc  app_restore_service_factory.h  app_web_contents_helper.cc  app_web_contents_helper.h  app_window.cc  app_window.h  app_window_browsertest.cc  app_window_contents.cc  app_window_contents.h  app_window_geometry_cache.cc  app_window_geometry_cache.h  app_window_geometry_cache_unittest.cc  app_window_interactive_uitest.cc  (+46 more)
ash/: BUILD.gn  DEPS  OWNERS  PRESUBMIT.py  README.md  accessibility_delegate.h  accessibility_types.h  animation_timings.h  app_launch_unittest.cc  ash.gyp  ash_chromeos_strings.grdp  ash_constants.cc  ash_constants.h  ash_export.h  ash_layout_constants.cc  ash_layout_constants.h  ash_prefs.cc  ash_resources.gyp  ash_resources.gypi  ash_root_window_transformer.cc  ash_root_window_transformer.h  ash_root_window_transformer_unittest.cc  ash_service.cc  ash_service.h  ash_service_unittest.cc  ash_strings.grd  ash_strings.gyp  ash_switches.cc  ash_switches.h  ash_touch_exploration_manager_chromeos.cc  ash_touch_exploration_manager_chromeos.h  ash_touch_exploration_manager_chromeos_unittest.cc  ash_touch_hud.gyp  ash_unittests.isolate  ash_unittests_manifest.json  ash_view_ids.h  ash_with_content_export.h  autotest_private_api_utils.cc  bluetooth_devices_observer.cc  brightness_control_delegate.h  (+167 more)
base/: BUILD.gn  DEPS  OWNERS  PRESUBMIT.py  async_socket_io_handler.h  async_socket_io_handler_posix.cc  async_socket_io_handler_unittest.cc  async_socket_io_handler_win.cc  atomic_flag.cc  atomic_flag.h  atomic_flag_unittest.cc  atomicops.h  atomicops_internals_arm64_gcc.h  atomicops_internals_arm_gcc.h  atomicops_internals_mips_gcc.h  atomicops_internals_tsan.h  atomicops_internals_x86_gcc.cc  atomicops_internals_x86_msvc.h  barrier_closure.cc  barrier_closure.h  base.gyp  base.gypi  base.isolate  base64url.cc  base_api.h  base_drag_source.cc  base_drag_source.h  base_drop_target.cc  base_drop_target.h  base_nacl.gyp  base_paths.cc  base_paths.h  base_paths_android.cc  base_paths_fuchsia.cc  base_paths_fuchsia.h  base_paths_linux.cc  base_paths_mac.mm  base_paths_posix.cc  base_paths_win.cc  base_paths_win.h  (+625 more)
blimp/: BUILD.gn  OWNERS  PRESUBMIT.py  README  README.md
build_overrides/: OWNERS  README.md  angle.gni  build.gni  dawn.gni  gtest.gni  pdfium.gni  swiftshader.gni  v8.gni  webrtc.gni
chrome/: BUILD.gn  DEPS  MAJOR_BRANCH_DATE  OWNERS  PRESUBMIT.py  README.md  VERSION  angle.isolate  angle_deqp_gles2_tests.isolate  angle_deqp_gles3_tests.isolate  angle_deqp_tests.isolate  angle_end2end_tests.isolate  angle_unittests.isolate  breakpad.isolate  browser_tests.isolate  build_nacl_irt.py  chrome.gyp  chrome.isolate  chrome.user32.delay.imports  chrome_android.gypi  chrome_android_paks.gypi  chrome_browser.gypi  chrome_browser_chromeos.gypi  chrome_browser_extensions.gypi  chrome_browser_ui.gypi  chrome_browser_ui_views.gyp  chrome_child.gypi  chrome_common.gypi  chrome_debugger.gypi  chrome_dll.gypi  chrome_dll_bundle.gypi  chrome_dll_syzygy.gypi  chrome_exe.gypi  chrome_features.gyp  chrome_features.gypi  chrome_gpu.gypi  chrome_installer.gypi  chrome_installer_static.gypi  chrome_installer_util.gypi  chrome_ios_bundle_resources.gypi  (+70 more)
chromecast/: BUILD.gn  DEPS  OWNERS  README.md  cast_shell.cmx  cast_shell_sandbox_policy  chromecast.gni  chromecast.gyp  chromecast_locales.gyp  (+1 more)
(+291672 files in other folders)
